# ndk-llvm-pass

./: .gitignore  CMakeLists.txt  README.md
NdkSamplePass/: CMakeLists.txt  Pass.cpp
